--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
     "express": "^4.17.1",
     "glob": "^7.1.6",
