--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,9 @@
   "author": "Nenad Borovcanin",
   "license": "ISC",
   "dependencies": {
+    "@metaplex-foundation/js": "^0.18.3",
+    "@metaplex/js": "^4.12.0",
+    "@solana/web3.js": "^1.73.3",
     "@types/jsonwebtoken": "^9.0.1",
     "apollo-server-express": "^2.10.1",
     "body-parser": "^1.19.0",
@@ -21,7 +24,9 @@
     "glob": "^7.1.6",
     "graphql": "^14.6.0",
     "jsonwebtoken": "^9.0.0",
-    "mysql2": "^3.1.2"
+    "moralis": "^2.14.3",
+    "mysql2": "^3.1.2",
+    "web3": "^1.8.2"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
